[package]
name = "schack_gui"
version = "0.1.0"
authors = ["eskilq <eskilq@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schackmotor = { path = "../schackmotor" }
ggez = "0.5"
tiny_http = "0.6.2"
reqwest = "0.9.20"